react-dotnet-nohttps.client/openshift/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-client-ts
    app.kubernetes.io/component: weather-client-ts
    app.kubernetes.io/instance: weather-client-ts
  name: weather-client-ts
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: weather-client-ts
